--- a/packages/teal-language-server/package.yaml
+++ b/packages/teal-language-server/package.yaml
@@ -10,7 +10,7 @@ categories:
   - LSP
 
 source:
-  id: pkg:luarocks/teal-language-server@dev-1?dev=true
+  id: pkg:luarocks/teal-language-server@0.0.5-1?dev=true
 
 bin:
   teal-language-server: luarocks:teal-language-server
